[tool.poetry]
name = "clkt"
version = "0.1.0"
description = "Continual Learning with knowledge tracing and sequential data"
authors = ["Georgii Chaikin <chaykin.georgiy217@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = { version = "^1.12.1+cu116", source = "pytorch-gpu-src" }
tqdm = "^4.66.2"
avalanche-lib = { extras = ["extra"], version = "^0.5.0" }
click = "^8.1.7"
pandas = "<2.2.1"


[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu116"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.1.4"
jupyterlab-execute-time = "^3.1.2"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
run_cl = "clkt.examples.run_cl:run_experiments"
#clkt-run = "clkt.main:main"
#data-preprocess = "clkt.data_preprocess:main"